--- a/HO/index.html
+++ b/HO/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - H2O - chemical flask (animation)</title>
+  <title>Oussama Hajar - H2O </title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
