--- a/HO/index.html
+++ b/HO/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Oussama Hajar - H2O </title>
+  <title>OSS Merroun - H2O Animation</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
